<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <android.support.v7.widget.CardView
        android:layout_margin="4dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="84dp">
            <TextView
                android:id="@+id/id_text_view_expence_name"
                android:text="@string/expencename"
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/id_text_view_expence_type"
                android:text="@string/expencetype"
                android:textStyle="italic"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="16dp"
                android:layout_alignParentBottom="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:visibility="invisible"
                android:id="@+id/id_text_view_exp_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/id_text_view_expende_amount"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:textSize="35sp"
                android:text="@string/text_maount"
                android:maxLines="1"
                />
        </RelativeLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>
